--- a/src/css/story/intro.styl
+++ b/src/css/story/intro.styl
@@ -28,3 +28,7 @@
 		padding-top 1.5rem
 		text-align center
 		set-type-size('medium', true)
+
+	&__prelude
+		max-width $column-width
+		margin 0 auto
