--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -17,7 +17,7 @@
 	<script src='critical.js'></script>
 	<!-- endsmoosh -->
 
-	{{> base/analytics }}
+	{{!-- {{> base/analytics }} --}}
 
 </head>
 
@@ -26,9 +26,8 @@
 	{{> base/header }}
 
 	<main id='content'>
-
+		
 		{{> story/intro }}
-		<!-- PUT ALL YOUR HTML HERE-->
 
 	</main>
 
@@ -36,7 +35,7 @@
 	<script src='{{basepath}}assets/scripts/d3.v5.0.0.min.js'></script> --}}
 	<script src='{{basepath}}assets/scripts/d3.v4.12.0+jetpack.min.js'></script>
 	<script src='bundle.js?version={{timestamp}}' async></script>
-	<script src='https://pudding.cool/assets/scripts/pudding-footer.js' async></script>
+	{{!-- <script src='https://pudding.cool/assets/scripts/pudding-footer.js' async></script> --}}
 </body>
 
 </html>
