load data and step text

--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -29,6 +29,18 @@
 		
 		{{> story/intro }}
 
+		<section id='perspective'>
+			{{> story/perspective}}
+		</section>
+
+		<section id='care'>
+			 {{> story/care}}
+		</section>
+
+		<section id='impact'>
+			 {{> story/impact}}
+		</section>
+
 	</main>
 
 	{{!--
