--- a/src/html/partials/story/intro.hbs
+++ b/src/html/partials/story/intro.hbs
@@ -1,6 +1,6 @@
 <div class='intro'>
 	<h1 class='intro__hed tk-canela'>{{copy.hed}}</h1>
-	{{!-- <p class='intro__dek tk-atlas'>{{meta.description}}</p> --}}
+	<p class='intro__dek tk-atlas'>{{copy.dek}}</p>
 	<p class='intro__byline tk-atlas'>By
 		<a href='{{meta.author.url}}' target='_blank'>
 			<strong>{{meta.author.name}}</strong>
