--- a/src/css/story/perspective.styl
+++ b/src/css/story/perspective.styl
@@ -1,12 +1,29 @@
 #perspective
 	.scroll__graphic
 		background rgba(yellow, 0.5)
-		height 50vh
 		position sticky
 		top 0
+		padding 1rem
+
+	.graphic__chart
+		max-width 80rem
+		margin 0 auto
+		background rgba(green, 0.5)
 
 	.scroll__text
+		position relative
 		background rgba(red, 0.5)
 
+	.step
+		max-width 25rem
+		margin 0 auto
+		height 50vh
 		p
 			margin 0
+
+
+	.graphic__chart svg
+		.person
+			path
+				fill none
+				stroke $off-black
