--- a/src/html/partials/story/perspective.hbs
+++ b/src/html/partials/story/perspective.hbs
@@ -1,10 +1,15 @@
 <h3 class='section__hed'>{{copy.perspectiveHed}}</h3>
 <div id='perspective-scroll'>
 	<div class='scroll__graphic'>
-		<svg>
-			<g class='g-axis'></g>
-			<g class='g-vis'></g>
-		</svg>
+		<div class='graphic__chart'>
+			<svg>
+				<g class='g-axis'></g>
+				<g class='g-vis'>
+					<g class='beyonce'></g>
+					<g class='deaths'></g>
+				</g>
+			</svg>
+		</div>
 	</div>
 	<div class='scroll__text'>
 		{{#each copy.perspectiveSteps}}
