--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -3,3 +3,11 @@
 .section__hed
 	max-width $column-width
 	margin 0 auto
+
+svg text
+	font-family $sans
+
+.axis text
+	text-transform uppercase
+	font-weight 500
+	fill $gray
