--- a/src/html/partials/story/perspective.hbs
+++ b/src/html/partials/story/perspective.hbs
@@ -3,7 +3,10 @@
 	<div class='scroll__graphic'>
 		<div class='graphic__chart'>
 			<svg>
-				<g class='g-axis'></g>
+				<g class='g-axis'>
+					<g class='axis axis--x'></g>
+					<g class='axis axis--y'></g>
+				</g>
 				<g class='g-vis'>
 					<g class='beyonce'></g>
 					<g class='deaths'></g>
