--- a/src/html/partials/story/perspective.hbs
+++ b/src/html/partials/story/perspective.hbs
@@ -8,8 +8,7 @@
 					<g class='axis axis--y'></g>
 				</g>
 				<g class='g-vis'>
-					<g class='beyonce'></g>
-					<g class='deaths'></g>
+					<g class='people'></g>
 				</g>
 			</svg>
 		</div>
