--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -1,5 +1,10 @@
 /* CUSTOM STORY STYLE */
 
+body, p
+	set-type-size(root, false)
+	+mq('bp-3')
+		set-type-size(large)
+
 .section__hed
 	max-width $column-width
 	margin 0 auto
