care chart start

--- a/src/html/partials/story/care.hbs
+++ b/src/html/partials/story/care.hbs
@@ -1,2 +1,11 @@
 <h3 class='section__hed'>{{copy.careHed}}</h3>
 <video src='assets/video/akecheta-web.mp4' muted preload loop autoplay></video>
+
+<figure>
+	<h3 class='figure_hed'>Weeks until "normal" traffic</h3>
+	<ul class='tk-atlas'></ul>
+
+	<ul class='heated-bar'>
+
+	</ul>
+</figure>
