--- a/src/css/story/care.styl
+++ b/src/css/story/care.styl
@@ -3,3 +3,62 @@
 		max-width $column-width
 		margin 0 auto
 		display none
+	
+	figure
+		max-width 80rem
+		margin 0 auto
+		
+		.people
+			display flex
+			flex-wrap wrap
+			// flex 0 1 auto
+
+		.person
+			width 8rem
+			margin 0 0.25em
+			set-type-size(x-small, true)
+			font-weight 600
+		
+		.week
+			display flex
+			align-items center
+			margin-bottom 0.5rem
+			padding-bottom 0.5rem
+			border-bottom 2px solid $off-white
+		
+		p.label
+			set-type-size(root, false)
+			font-family $mono
+			line-height 1
+			margin 0
+			min-width 3rem
+			text-align right
+			padding-right 0.5em
+
+
+	.heated-bar
+		li
+			list-style-type none
+		
+		p.label
+			set-type-size(x-small, true)
+			font-family $mono
+			margin 0
+			min-width 10rem
+			text-align right
+			padding-right 0.5em
+
+		.person2
+			display flex
+			margin-bottom 0.25em
+
+		.days
+			display flex
+			flex-wrap wrap
+			border 1px solid $gray
+
+		.day
+			height 1rem
+			width 6px
+			background-color red
+
