--- a/src/css/story/care.styl
+++ b/src/css/story/care.styl
@@ -5,7 +5,7 @@
 		display none
 	
 	figure
-		max-width 80rem
+		max-width 70rem
 		margin 0 auto
 		
 		.people
@@ -15,8 +15,8 @@
 
 		.person
 			width 8rem
-			margin 0 0.25em
-			set-type-size(x-small, true)
+			margin 0.25em
+			set-type-size(x-small, false)
 			font-weight 600
 		
 		.week
@@ -42,7 +42,7 @@
 		
 		p.label
 			set-type-size(x-small, true)
-			font-family $mono
+			// font-family $mono
 			margin 0
 			min-width 10rem
 			text-align right
