--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -33,6 +33,10 @@
 			{{> story/perspective}}
 		</section>
 
+		<section id='change'>
+			{{> story/change}}
+		</section>
+
 		<section id='care'>
 			 {{> story/care}}
 		</section>
