--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -3,7 +3,7 @@
 body, p
 	set-type-size(root, false)
 	+mq('bp-3')
-		set-type-size(large)
+		font-size 21px
 
 .section__hed
 	max-width $column-width
