--- a/src/css/story/header.styl
+++ b/src/css/story/header.styl
@@ -18,8 +18,8 @@ header
 			width 100%
 	
 header.is-sticky
-	
 	position fixed
+	transform translate3d(0,0,0)
 	background-color $white
 	box-shadow 0 0 7px 1px $gray-light
 	
@@ -28,6 +28,7 @@ header.is-sticky
 	
 	.header__toggle
 		position fixed
+		transform translate3d(0,0,0)
 		top 0
 		right 0
 		padding 0.75rem
