--- a/src/html/partials/story/perspective.hbs
+++ b/src/html/partials/story/perspective.hbs
@@ -1,4 +1,4 @@
-<h3 class='section__hed'>{{copy.perspectiveHed}}</h3>
+{{!-- <h3 class='section__hed'>{{copy.perspectiveHed}}</h3> --}}
 <div id='perspective-scroll'>
 	<figure class='scroll__figure'>
 		<div class='figure__chart'>
