--- a/src/html/partials/story/change.hbs
+++ b/src/html/partials/story/change.hbs
@@ -1,10 +1,21 @@
-<h3 class='section__hed'>{{copy.changeHed}}</h3>
-	<figure>
-		<table class='tk-atlas'>
-			<thead>
-				<tr><th>Name</th><th class='number'>Views (avg.)</th><th class='number'>Views (death)</th><th class='number'>Times Bigger</th></tr>
-			</thead>
-			<tbody></tbody>
-		</table>
-	</figure>
+{{!-- <h3 class='section__hed'>{{copy.changeHed}}</h3> --}}
+
+<div class='prose'>
+	{{#each copy.changeIntro}}
+	<p>{{{value}}}</p>
+	{{/each}}
 </div>
+
+<figure>
+	<table class='tk-atlas'>
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th class='number'>Average views before death</th>
+				<th class='number'>Views 48 hours after death</th>
+				<th class='number'>Increase (%)</th>
+			</tr>
+		</thead>
+		<tbody></tbody>
+	</table>
+</figure>
