--- a/src/css/story/perspective.styl
+++ b/src/css/story/perspective.styl
@@ -27,8 +27,8 @@
 		p
 			margin 0
 			padding 1rem
-			background-color rgba($off-white, 1)
-			box-shadow 0 0 10px 2px rgba($gray, 0.33)
+			background-color rgba($bg, 1)
+			box-shadow 0 0 10px 2px rgba($fg, 0.25)
 
 
 	figure svg
