--- a/src/css/utils/variables.styl
+++ b/src/css/utils/variables.styl
@@ -43,9 +43,9 @@ $gray = #969696
 $gray-light = #c9c9c9
 $off-white = #f4f4f4
 
-$bg = #fff
-$fg = $off-black
-$primary= #f33
+$bg = #111
+$fg = $off-white
+$primary= gold
 
 $column-width = 35rem
 
