--- a/src/html/partials/story/impact.hbs
+++ b/src/html/partials/story/impact.hbs
@@ -5,5 +5,12 @@
 </div>
 
 <figure>
-	
+	<div class='figure__chart'>
+		<svg>
+			<g>
+				<g class='g-axis'></g>
+				<g class='g-vis'></g>
+			</g>
+		</svg>
+	</div>
 </figure>
