--- a/src/css/utils/layout.styl
+++ b/src/css/utils/layout.styl
@@ -39,10 +39,10 @@ p
 
 a
 	text-decoration none
-	border-bottom 1px solid $off-black
-	color $off-black
+	border-bottom 1px solid $fg
+	color $fg
 	&:visited, &:hover
-		color $off-black
+		color $fg
 
 strong, b
 	font-weight bold
