--- a/src/html/partials/story/perspective.hbs
+++ b/src/html/partials/story/perspective.hbs
@@ -10,8 +10,10 @@
 				<g class='g-vis'>
 					<g class='people'></g>
 				</g>
+				<g class='g-voronoi'></g>
 			</svg>
 		</chart>
+		<figcaption class='x-small tk-atlas'><em>{{{copy.perspectiveNote}}}</em></figcaption>
 	</figure>
 	<article class='scroll__text'>
 		{{#each copy.perspectiveSteps}}
