--- a/src/html/partials/story/perspective.hbs
+++ b/src/html/partials/story/perspective.hbs
@@ -18,7 +18,7 @@
 	<article class='scroll__text'>
 		{{#each copy.perspectiveSteps}}
 		<div class='step' data-step='{{step}}'>
-			<p>{{text}}</p>
+			<p>{{{text}}}</p>
 		</div>
 		{{/each}}
 	</article>
