--- a/src/css/story/perspective.styl
+++ b/src/css/story/perspective.styl
@@ -15,8 +15,8 @@
 		margin 0 auto
 		cursor pointer
 
-	// figcaption
-	// 	text-align left
+	figcaption
+		max-width $column-width
 
 	article
 		pointer-events none
