tooltip on other charts

--- a/src/css/story/change.styl
+++ b/src/css/story/change.styl
@@ -10,6 +10,7 @@
 		set-type-size(x-small, false)
 		margin 0 auto
 		table-layout fixed
+		position relative
 	th,td
 		width 33%
 		vertical-align bottom
@@ -33,6 +34,7 @@
 			padding 0.5em
 			&:first-child
 				font-weight 500
+				cursor pointer
 			&:nth-child(4)
 				font-weight 600
 
