--- a/src/html/partials/story/outro.hbs
+++ b/src/html/partials/story/outro.hbs
@@ -1,3 +1,12 @@
+<section id='conclusion'>
+	<div class='prose'>
+		{{#each copy.conclusion}}
+		<p>{{{value}}}</p>
+		{{/each}}
+	</div>
+
+</section>
+
 <div class='method'>
 	<div class='prose'>
 		<h3 class='prose__hed'>
