--- a/src/css/story/care.styl
+++ b/src/css/story/care.styl
@@ -21,6 +21,9 @@
 			max-width $column-width
 			padding 0 1rem
 			margin-bottom 3rem
+
+		.figure__list
+			position relative
 		
 		.people
 			display flex
@@ -29,9 +32,10 @@
 
 		.person
 			width 8rem
-			margin 0.25em
+			padding 0.25em
 			set-type-size(x-small, false)
 			font-weight 600
+			cursor pointer
 		
 		.week
 			display flex
@@ -50,6 +54,7 @@
 			padding-right 0.5em
 			color $primary
 			font-weight 600
+			cursor pointer
 
 
 	.heated-bar
