--- a/src/css/story/tooltip.styl
+++ b/src/css/story/tooltip.styl
@@ -42,8 +42,9 @@
 		display inline-block
 		float left
 		margin-right 0.75em
-		background-size contain
-		background-position center center
+		background-size cover
+		background-position center 0
+		background-repeat no-repeat
 		background-color $gray-dark
 		border 1px solid $gray-dark
 		border-radius 2px
