--- a/src/html/partials/story/care.hbs
+++ b/src/html/partials/story/care.hbs
@@ -7,14 +7,14 @@
 
 
 <div class='prose'>
-	{{#each copy.changeIntro}}
+	{{#each copy.careIntro}}
 	<p>{{{value}}}</p>
 	{{/each}}
 </div>
 
 <figure class='figure--chart'>
 	<p class='figure__hed'>{{{copy.careChartTitle}}}</p>
-	<ul class='tk-atlas'></ul>
+	<ul class='figure__list tk-atlas'></ul>
 
 	<ul class='heated-bar'>
 
