--- a/src/css/story/care.styl
+++ b/src/css/story/care.styl
@@ -16,11 +16,8 @@
 		margin 0 auto
 		position relative
 
-		.figure__hed
-			margin 0 auto
+		figcaption
 			max-width $column-width
-			padding 0 1rem
-			margin-bottom 3rem
 
 		.figure__list
 			position relative
@@ -42,7 +39,7 @@
 			align-items center
 			margin-bottom 0.5rem
 			padding-bottom 0.5rem
-			border-bottom 2px solid $off-white
+			border-bottom 2px solid lighten($bg, 20)
 		
 		p.label
 			set-type-size(small, false)
