--- a/src/css/story/tooltip.styl
+++ b/src/css/story/tooltip.styl
@@ -1,7 +1,7 @@
 .tooltip
 	position absolute
-	top 0
-	left 0
+	top 50%
+	left 50%
 	z-index set-index(overlay)
 	background rgba($bg, 0.9)
 	width 20rem
