--- a/src/html/partials/story/change.hbs
+++ b/src/html/partials/story/change.hbs
@@ -6,7 +6,7 @@
 	{{/each}}
 </div>
 
-<figure>
+<figure class='is-truncated'>
 	<table class='tk-atlas'>
 		<thead>
 			<tr>
@@ -19,3 +19,5 @@
 		<tbody></tbody>
 	</table>
 </figure>
+
+<div class='toggle-table'><button class='btn x-small'>Show all</button></div>
