impact chart things

--- a/src/css/story/change.styl
+++ b/src/css/story/change.styl
@@ -21,7 +21,7 @@
 			width 9rem
 	thead
 		tr
-			border-bottom 2px solid $gray-light
+			border-bottom 2px solid $gs-light
 		th
 			text-transform uppercase
 			letter-spacing 0.05em
@@ -31,7 +31,7 @@
 			text-align right
 	tbody
 		tr
-			border-bottom 1px solid $gray-light
+			border-bottom 1px solid $gs-light
 		td
 			padding 0.5em
 			&:first-child
