--- a/src/css/story/header.styl
+++ b/src/css/story/header.styl
@@ -5,7 +5,7 @@ header
 	top 0
 	left 0
 	width 100%
-	background-color $white
+	background-color $bg
 
 	a.logo
 		display block
@@ -21,8 +21,8 @@ header
 header.is-sticky
 	position fixed
 	transform translate3d(0,0,0)
-	background-color $white
-	box-shadow 0 0 7px 1px $gray-light
+	background-color $bg
+	box-shadow 0 0 7px 1px darken($gray-light, 10)
 	
 	a.logo
 		margin 0 auto
