--- a/src/css/story/perspective.styl
+++ b/src/css/story/perspective.styl
@@ -48,7 +48,7 @@
 				display none
 			.tick line
 				stroke-opacity 0.5
-				stroke $gray
+				stroke $gs-medium
 				stroke-width 1px
 				stroke-dasharray 4px 4px
 			path
@@ -61,7 +61,7 @@
 					fill $primary
 			path
 				fill none
-				stroke $gray
+				stroke $gs-medium
 				stroke-width 2px
 				transition stroke 250ms ease-in-out
 				&.is-transparent
@@ -69,7 +69,7 @@
 			
 			circle
 				stroke $bg
-				fill $gray
+				fill $gs-medium
 				stroke-width 2px
 
 				&.is-transparent
