--- a/src/css/utils/variables.styl
+++ b/src/css/utils/variables.styl
@@ -43,9 +43,17 @@ $gray = #969696
 $gray-light = #c9c9c9
 $off-white = #f4f4f4
 
-$bg = #111
-$fg = $off-white
-$primary= gold
+$gs = #e9e9e9
+$gs-dark = darken($gs, 35)
+$gs-medium = darken($gs, 20)
+$gs-light = darken($gs, 10)
+
+$bg = $gs
+$fg = $off-black
+$primary = teal
+$primary = orangered
+// $primary = firebrick
+
 
 $column-width = 35rem
 
