--- a/src/css/story/care.styl
+++ b/src/css/story/care.styl
@@ -39,7 +39,7 @@
 			align-items center
 			margin-bottom 0.5rem
 			padding-bottom 0.5rem
-			border-bottom 2px solid lighten($bg, 20)
+			border-bottom 1px solid $gs-light
 		
 		p.label
 			set-type-size(small, false)
@@ -73,7 +73,7 @@
 		.days
 			display flex
 			flex-wrap wrap
-			border 1px solid $gray
+			border 1px solid $gs-light
 
 		.day
 			height 1rem
