--- a/src/html/partials/story/impact.hbs
+++ b/src/html/partials/story/impact.hbs
@@ -8,7 +8,7 @@
 	<div class='figure__chart'>
 		<svg>
 			<g>
-				<g class='g-axis'></g>
+				<g class='g-axis'><g class='axis'></g></g>
 				<g class='g-vis'></g>
 			</g>
 		</svg>
