--- a/src/html/partials/story/intro.hbs
+++ b/src/html/partials/story/intro.hbs
@@ -7,7 +7,7 @@
 	</p>
 	<div class='intro__prelude'>
 		{{#each copy.prelude}}
-		<p>{{value}}</p>
+		<p>{{{value}}}</p>
 		{{/each}}
 	</div>
 	<h1 class='intro__hed tk-atlas'>{{copy.hed}}</h1>
