--- a/src/css/utils/variables.styl
+++ b/src/css/utils/variables.styl
@@ -44,14 +44,15 @@ $gray-light = #c9c9c9
 $off-white = #f4f4f4
 
 $gs = #e9e9e9
-$gs-dark = darken($gs, 35)
+$gs-dark = darken($gs, 40)
 $gs-medium = darken($gs, 20)
 $gs-light = darken($gs, 10)
 
 $bg = $gs
-$fg = $off-black
+$fg = #3f3f3f
 $primary = teal
 $primary = orangered
+$primary = $gray-dark
 // $primary = firebrick
 
 
