--- a/src/html/partials/story/change.hbs
+++ b/src/html/partials/story/change.hbs
@@ -11,13 +11,14 @@
 		<thead>
 			<tr>
 				<th>Name</th>
-				<th class='number'>Average views before death</th>
-				<th class='number'>Views 48 hours after death</th>
+				<th class='number'>Average views<br> before death</th>
+				<th class='number'>Views 48 hours<br> after death</th>
 				<th class='number'>Increase (%)</th>
 			</tr>
 		</thead>
 		<tbody></tbody>
 	</table>
+	<div class='show-more is-visible'></div>
 </figure>
 
-<div class='toggle-table'><button class='btn x-small'>Show all</button></div>
+<div class='toggle-table'><button class='btn x-small'>Show More</button></div>
