--- a/src/html/partials/story/change.hbs
+++ b/src/html/partials/story/change.hbs
@@ -11,8 +11,8 @@
 		<thead>
 			<tr>
 				<th>Name</th>
-				<th class='number'>Average views<br> before death</th>
-				<th class='number'>Views 48 hours<br> after death</th>
+				<th class='number'>Avg. 48 hr. views<br> before death</th>
+				<th class='number'>Views 48 hrs.<br> after death</th>
 				<th class='number'>Increase (%)</th>
 			</tr>
 		</thead>
