update dev version

--- a/src/css/story/care.styl
+++ b/src/css/story/care.styl
@@ -4,13 +4,15 @@
 		video
 			max-width 33rem
 			margin 0 auto
+			border-radius 8px
 
 		figcaption
-			max-width 33rem
+			max-width $column-width * 3
 			margin 0.25em auto
 			text-align center
 			color $gray-dark
-	
+			font-size 82px
+
 	figure.figure--chart
 		max-width 67rem
 		margin 0 auto
