--- a/src/css/story/tooltip.styl
+++ b/src/css/story/tooltip.styl
@@ -45,8 +45,8 @@
 		background-size cover
 		background-position center 0
 		background-repeat no-repeat
-		background-color $gray-dark
-		border 1px solid $gray-dark
+		background-color $gs-medium
+		border 1px solid $gs-medium
 		border-radius 2px
 
 
