--- a/src/html/partials/story/care.hbs
+++ b/src/html/partials/story/care.hbs
@@ -2,7 +2,7 @@
 
 <figure class='figure--video'>
 	<video src='assets/video/akecheta-web.mp4' muted preload loop autoplay></video>
-	<figcaption class='x-small tk-atlas'>{{{copy.careCaption}}}</figcaption>
+	<figcaption class='x-small'>{{{copy.careCaption}}}</figcaption>
 </figure>
 
 
