--- a/src/html/partials/story/perspective.hbs
+++ b/src/html/partials/story/perspective.hbs
@@ -17,9 +17,10 @@
 	</figure>
 	<article class='scroll__text'>
 		{{#each copy.perspectiveSteps}}
-		<div class='step {{class}}' data-step='{{step}}'>
+		<div class='step' data-step='{{step}}'>
 			<p>{{{text}}}</p>
 		</div>
 		{{/each}}
+		<div class='step-hover'></div>
 	</article>
 </div>
