--- a/src/html/partials/story/care.hbs
+++ b/src/html/partials/story/care.hbs
@@ -14,10 +14,10 @@
 
 <figure class='figure--chart'>
 	<p class='figure__hed'>{{{copy.careChartTitle}}}</p>
+	<div class='figure__filter'>
+		<select class='filter--industry'></select>
+		<select class='filter--cause'></select>
+	</div>
 	<ul class='figure__list tk-atlas'></ul>
-
-	<ul class='heated-bar'>
-
-	</ul>
 	<figcaption class='x-small tk-atlas'><em>{{{copy.careNote}}}</em></figcaption>
 </figure>
