--- a/src/css/story/care.styl
+++ b/src/css/story/care.styl
@@ -35,6 +35,8 @@
 			set-type-size(x-small, false)
 			font-weight 400
 			cursor pointer
+			&.is-faded
+				color $gs-light
 		
 		.week
 			display flex
@@ -82,3 +84,15 @@
 			width 6px
 			background-color red
 
+	.figure__filter
+		display flex
+		justify-content center
+		margin-bottom 1.5rem
+	
+	select
+		display block
+		margin 0 0.5rem 
+		width 8rem
+		background $white
+		border-color $gs-medium
+		set-type-size(x-small, false)
