--- a/src/css/story/change.styl
+++ b/src/css/story/change.styl
@@ -19,8 +19,8 @@
 		width 25%
 		vertical-align bottom
 		&:first-child
-			min-width 15rem
-			width 15rem
+			min-width 20rem
+			width 20rem
 	thead
 		tr
 			// border-bottom 2px solid $gs-light
@@ -50,9 +50,12 @@
 			text-align right
 
 		.name
+			a
+				border none
 			span
 				set-type-size(xx-small)
 				font-weight 400
+				margin-left 0.5em
 
 	.toggle-table
 		text-align center
