--- a/src/css/utils/variables.styl
+++ b/src/css/utils/variables.styl
@@ -52,7 +52,7 @@ $bg = $gs
 $fg = #3f3f3f
 $primary = teal
 $primary = orangered
-$primary = $gray-dark
+$primary = $off-black
 // $primary = firebrick
 
 
