--- a/src/html/partials/story/care.hbs
+++ b/src/html/partials/story/care.hbs
@@ -20,4 +20,5 @@
 	</div>
 	<ul class='figure__list tk-atlas'></ul>
 	<figcaption class='x-small tk-atlas'><em>{{{copy.careNote}}}</em></figcaption>
+	<p class='figure__label x-small'>Weeks until normal traffic</p>
 </figure>
