--- a/src/css/story/filter.styl
+++ b/src/css/story/filter.styl
@@ -7,6 +7,7 @@
 	max-width 14rem
 	z-index set-index(top)
 	background-color $off-white
+	box-shadow 0 2px 6px 2px rgba($fg, 0.25)
 	padding 0.75rem
 	transform translate3d(-62%, 100%, 0)
 	transition transform 250ms ease-in-out
@@ -32,10 +33,10 @@
 		background-color $off-white
 		padding 0.75rem
 		width 100%
-		border-bottom 1px solid $gs-light
 		cursor pointer
 		display flex
 		justify-content space-between
+		box-shadow 2px 0 2px 0px rgba($fg, 0.25)
 
 	.label__value
 		text-transform none
