--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -39,8 +39,9 @@ section
 
 	.annotation-note-title
 		fill $gs-dark
+		set-type-size(x-small, false)
 		font-weight 500
-		font-size 13px
+		letter-spacing 0.05em
 
 	.connector, .note-line
 		stroke $gs-dark
